<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/action_sourcename"
            android:checked="true"
            android:title="@string/opt_sourcename"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_time"
            android:checked="true"
            android:title="@string/opt_time"
            app:showAsAction="never" />
    </group>

    <group
        android:id="@+id/timeoptions"
        android:checkableBehavior="single"
        android:enabled="false">
        <item
            android:id="@+id/action_time1"
            android:checked="false"
            android:title="@string/opt_time1"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_time2"
            android:checked="true"
            android:title="@string/opt_time2"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_time3"
            android:checked="false"
            android:title="@string/opt_time3"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_time4"
            android:checked="false"
            android:title="@string/opt_time4"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/action_blacklist"
        android:title="@string/opt_blacklist"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sms"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>
