<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="click.dummer.notify_to_jabber.MainActivity"
    android:id="@+id/primaryContent"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:text="@string/loop_warning" />

            <TextView
                android:id="@+id/hintJabber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/use_jabber" />

            <EditText
                android:id="@+id/fromJIDedit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:ems="10"
                android:hint="@string/my_jabber_id"
                android:textColor="@android:color/black"
                android:background="@android:color/holo_orange_light"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/passEdit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:ems="10"
                android:hint="@string/my_j4bber_password"
                android:inputType="textVisiblePassword"
                android:background="@android:color/holo_orange_light"
                android:textColor="@android:color/darker_gray" />

            <EditText
                android:id="@+id/toJIDedit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/send_to_jabber_id" />

            <TextView
                android:id="@+id/hintGotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/or_a_gotify_server" />

            <EditText
                android:id="@+id/gotifyEdit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:ems="10"
                android:inputType="textUri"
                android:hint="@string/gotify_server_hint" />

            <EditText
                android:id="@+id/gotifyAppToken"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/gotify_app_token_hint" />

            <EditText
                android:id="@+id/gotifyFingerprint"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:ems="10"
                android:textSize="8dp"
                android:inputType="textMultiLine"
                android:hint="@string/fingerprint_hint" />

            <Button
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storebtn_hint"
                android:id="@+id/btnCreateNotify"
                android:onClick="buttonClicked">
                <requestFocus />
            </Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="\nLOG ;-D"
                android:id="@+id/textView"
                android:textAlignment="gravity"
                android:gravity="bottom"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbarAlwaysDrawVerticalTrack="false" />
        </LinearLayout>

</ScrollView>
